# gists-and-scratchpads

./: README.md
leo/: README.md  viewer.html
mcp-ado/: RESEARCH.md
sofa-tibia-guide/: .gitignore  README.md  analyze_triangle_density.py  config_case4.yaml  environment.yml  pyproject.toml  settings.yaml  setup_sofa_env.sh  test_angle_cone.py  test_generic_original.py  test_generic_solver.py  test_larger_distances.py  test_mvm_seating_e2e.py  test_original_with_fixes.py
sofa-tibia-guide/assets/: README.md
sofa-tibia-guide/docs/: architecture.md  asset-pipeline.md  collision-test-results.md  hypothesis-testing-results.md  multi-phase-collision-proposal.md  requirements.md  seating-approaches.md  session-notes-2026-01-27.md  settings-reference.md  test-scenarios.md  user-needs.md
sofa-tibia-guide/examples/: basic_seating.py  test_case4.py
sofa-tibia-guide/experiments/: __init__.py  attractive_seating_poc.py  run_disturbance.py  test_attractive_seating.py
sofa-tibia-guide/scenes/: __init__.py  attractive_seating.py  mvm_seating.py  rigid_collision_test.scn  simple_collision.scn
sofa-tibia-guide/src/tibia_guide/: __init__.py  config.py  seating.py  visualization.py
sofa-tibia-guide/src/tibia_guide/assets/: __init__.py  loader.py  transform.py
sofa-tibia-guide/src/tibia_guide/metrics/: __init__.py  contact.py  pose.py
sofa-tibia-guide/tests/: conftest.py
sofa-tibia-guide/tests/integration/: test_scene_creation.py  test_seating_api.py
sofa-tibia-guide/tests/unit/: test_loader.py  test_pose.py  test_transform.py
